feat: split teams command